# Vulkan-Hpp

./: .appveyor.yml  .clang-format  .clang-format_10  .clang-format_11  .clang-format_12  .clang-format_13  .clang-format_14  .clang-format_15  .clang-format_16  .clang-format_17  .clang-format_18  .clang-format_19  .clang-format_20  .clang-format_21  .clang-format_7  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  LICENSE.txt  README.md  REUSE.toml  VideoHppGenerator.cpp  VideoHppGenerator.hpp  VkCppGenerator.cpp  VulkanHpp.natvis  VulkanHppGenerator.cpp  VulkanHppGenerator.hpp  XMLHelper.hpp  main.cpp  sonar-project.properties  vk_raii_ProgrammingGuide.md  精选购买美国学位证（LU毕业证成绩单）+Q微信3431474023利哈伊大学学位证成绩单*办理LU文凭学历认证Lehigh University  精选购买美国学位证（PSU毕业证成绩单）+Q微信3431474023宾州州立大学学位证成绩单*办理PSU文凭学历认证Penn State University Park
RAII_Samples/: CMakeLists.txt
RAII_Samples/01_InitInstance/: 01_InitInstance.cpp  CMakeLists.txt
RAII_Samples/02_EnumerateDevices/: 02_EnumerateDevices.cpp  CMakeLists.txt
RAII_Samples/03_InitDevice/: 03_InitDevice.cpp  CMakeLists.txt
RAII_Samples/04_InitCommandBuffer/: 04_InitCommandBuffer.cpp  CMakeLists.txt
RAII_Samples/05_InitSwapchain/: 05_InitSwapchain.cpp  CMakeLists.txt
RAII_Samples/06_InitDepthBuffer/: 06_InitDepthBuffer.cpp  CMakeLists.txt
RAII_Samples/07_InitUniformBuffer/: 07_InitUniformBuffer.cpp  CMakeLists.txt
RAII_Samples/08_InitPipelineLayout/: 08_InitPipelineLayout.cpp  CMakeLists.txt
RAII_Samples/09_InitDescriptorSet/: 09_InitDescriptorSet.cpp  CMakeLists.txt
RAII_Samples/10_InitRenderPass/: 10_InitRenderPass.cpp  CMakeLists.txt
RAII_Samples/11_InitShaders/: 11_InitShaders.cpp  CMakeLists.txt
RAII_Samples/12_InitFrameBuffers/: 12_InitFrameBuffers.cpp  CMakeLists.txt
RAII_Samples/13_InitVertexBuffer/: 13_InitVertexBuffer.cpp  CMakeLists.txt
RAII_Samples/14_InitPipeline/: 14_InitPipeline.cpp  CMakeLists.txt
RAII_Samples/15_DrawCube/: 15_DrawCube.cpp  CMakeLists.txt
RAII_Samples/16_Vulkan_1_1/: 16_Vulkan_1_1.cpp  CMakeLists.txt
RAII_Samples/CopyBlitImage/: CMakeLists.txt  CopyBlitImage.cpp
RAII_Samples/CreateDebugUtilsMessenger/: CMakeLists.txt  CreateDebugUtilsMessenger.cpp
RAII_Samples/DebugUtilsObjectName/: CMakeLists.txt  DebugUtilsObjectName.cpp
RAII_Samples/DrawTexturedCube/: CMakeLists.txt  DrawTexturedCube.cpp
RAII_Samples/DynamicUniform/: CMakeLists.txt  DynamicUniform.cpp
RAII_Samples/EnableValidationWithCallback/: CMakeLists.txt  EnableValidationWithCallback.cpp
RAII_Samples/EnumerateDevicesAdvanced/: CMakeLists.txt  EnumerateDevicesAdvanced.cpp
RAII_Samples/Events/: CMakeLists.txt  Events.cpp
RAII_Samples/ImmutableSampler/: CMakeLists.txt  ImmutableSampler.cpp
RAII_Samples/InitTexture/: CMakeLists.txt  InitTexture.cpp
RAII_Samples/InputAttachment/: CMakeLists.txt  InputAttachment.cpp
RAII_Samples/InstanceExtensionProperties/: CMakeLists.txt  InstanceExtensionProperties.cpp
RAII_Samples/InstanceLayerExtensionProperties/: CMakeLists.txt  InstanceLayerExtensionProperties.cpp
RAII_Samples/InstanceLayerProperties/: CMakeLists.txt  InstanceLayerProperties.cpp
RAII_Samples/InstanceVersion/: CMakeLists.txt  InstanceVersion.cpp
RAII_Samples/MultipleSets/: CMakeLists.txt  MultipleSets.cpp
RAII_Samples/OcclusionQuery/: CMakeLists.txt  OcclusionQuery.cpp
RAII_Samples/PhysicalDeviceExtensions/: CMakeLists.txt  PhysicalDeviceExtensions.cpp
RAII_Samples/PhysicalDeviceFeatures/: CMakeLists.txt  PhysicalDeviceFeatures.cpp
RAII_Samples/PhysicalDeviceGroups/: CMakeLists.txt  PhysicalDeviceGroups.cpp
RAII_Samples/PhysicalDeviceMemoryProperties/: CMakeLists.txt  PhysicalDeviceMemoryProperties.cpp
RAII_Samples/PhysicalDeviceProperties/: CMakeLists.txt  PhysicalDeviceProperties.cpp
RAII_Samples/PhysicalDeviceQueueFamilyProperties/: CMakeLists.txt  PhysicalDeviceQueueFamilyProperties.cpp
RAII_Samples/PipelineCache/: CMakeLists.txt  PipelineCache.cpp
RAII_Samples/PipelineDerivative/: CMakeLists.txt  PipelineDerivative.cpp
RAII_Samples/PushConstants/: CMakeLists.txt  PushConstants.cpp
RAII_Samples/PushDescriptors/: CMakeLists.txt  PushDescriptors.cpp
RAII_Samples/RayTracing/: CMakeLists.txt  CameraManipulator.cpp  CameraManipulator.hpp  RayTracing.cpp
RAII_Samples/SecondaryCommandBuffer/: CMakeLists.txt  SecondaryCommandBuffer.cpp
RAII_Samples/SeparateImageSampler/: CMakeLists.txt  SeparateImageSampler.cpp
RAII_Samples/SurfaceCapabilities/: CMakeLists.txt  SurfaceCapabilities.cpp
RAII_Samples/SurfaceFormats/: CMakeLists.txt  SurfaceFormats.cpp
RAII_Samples/Template/: CMakeLists.txt  Template.cpp
RAII_Samples/TexelBuffer/: CMakeLists.txt  TexelBuffer.cpp
RAII_Samples/utils/: CMakeLists.txt  shaders.hpp  utils.hpp
docs/: Handles.md  (+8 more)
samples/: CMakeLists.txt
samples/01_InitInstance/: 01_InitInstance.cpp  CMakeLists.txt
samples/02_EnumerateDevices/: 02_EnumerateDevices.cpp  CMakeLists.txt
samples/03_InitDevice/: 03_InitDevice.cpp  CMakeLists.txt
samples/04_InitCommandBuffer/: 04_InitCommandBuffer.cpp  CMakeLists.txt
samples/05_InitSwapchain/: 05_InitSwapchain.cpp  CMakeLists.txt
samples/06_InitDepthBuffer/: 06_InitDepthBuffer.cpp  CMakeLists.txt
samples/07_InitUniformBuffer/: 07_InitUniformBuffer.cpp  CMakeLists.txt
samples/08_InitPipelineLayout/: 08_InitPipelineLayout.cpp  CMakeLists.txt
samples/09_InitDescriptorSet/: 09_InitDescriptorSet.cpp  CMakeLists.txt
samples/10_InitRenderPass/: 10_InitRenderPass.cpp  CMakeLists.txt
samples/11_InitShaders/: 11_InitShaders.cpp  CMakeLists.txt
samples/12_InitFrameBuffers/: 12_InitFrameBuffers.cpp  CMakeLists.txt
samples/13_InitVertexBuffer/: 13_InitVertexBuffer.cpp  CMakeLists.txt
samples/14_InitPipeline/: 14_InitPipeline.cpp  CMakeLists.txt
samples/15_DrawCube/: 15_DrawCube.cpp  CMakeLists.txt
samples/16_Vulkan_1_1/: 16_Vulkan_1_1.cpp  CMakeLists.txt
samples/CopyBlitImage/: CMakeLists.txt  CopyBlitImage.cpp
samples/CreateDebugReportCallback/: CMakeLists.txt  CreateDebugReportCallback.cpp
tests/: CMakeLists.txt  test_macros.hpp
(+326 files in other folders)
